<resources>
    <string name="app_name">Criminal Intent</string>
    <string name="about_description">
        <![CDATA[A simple list for keeping track of "office crimes" in the workplace. Great for catching those troublemakers!
        <br />
            <br>
                <a href="https://icons8.com">App icon is by Icons8.</a> Recolored with Android Asset Studio.
            </br>
        ]]>
    </string>
    <string name="icon_by_icons8"></string>
    <string name="action_settings">Settings</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="date_picker_title">Date of Crime: </string>
    <string name="time_picker_title">Time of Crime: </string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s crimes</string>
    <string name="menu_delete_item">Delete</string>
    <string name="toast_crime_list_empty"> No Crimes yet. Click the \"+\" button above to
    add a new one. </string>
    <string name="toast_crime_deleted">Crime deleted</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">The crime \"%1$s\" was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">There is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="crime_call_suspect_button">Call</string>
    <string name="crime_list_empty">Add an item above to get started!</string>
    <string name="permissions_to_retrieve_contact_failed">Until permissions are granted, we cannot display the names</string>
    <string name="about_my_app">About My App</string>
    <string name="permissions_camera_must_be_granted">Camera permissions must be granted before accessing the camera.</string>
    <string name="view_photo_in_full_screen">view photo in full screen</string>
    <string name="crime_updated">Crime updated</string>
    <string name="crime_photo_view">Crime Photo View</string>
    <string name="camera_button">Camera Button</string>

    <plurals name="subtitle_plural">
        <item quantity="one">%1$s crime</item>
        <item quantity="other">%1$s crimes</item>
    </plurals>

</resources>
