<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/fragment_crime_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/view_camera_and_title_container"
            layout="@layout/view_camera_and_title"/>

        <TextView
            android:id="@+id/crime_details_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_camera_and_title_container"
            android:text="@string/crime_details_label"
            style="?android:listSeparatorTextViewStyle"/>

        <Button
            android:id="@+id/crime_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/crime_details_label"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <Button
            android:id="@+id/crime_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/crime_date"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <CheckBox
            android:id="@+id/crime_solved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/crime_time"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/crime_solved_label"/>

        <LinearLayout
            android:id="@+id/crime_suspect_details_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/crime_report"
            android:orientation="horizontal">

            <Button
                android:id="@+id/crime_suspect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:text="@string/crime_suspect_text"/>

            <Button
                android:id="@+id/crime_call_suspect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:drawableLeft="@drawable/ic_phone_icon"
                android:text="@string/crime_call_suspect_button"/>

        </LinearLayout>

        <Button
            android:id="@+id/crime_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/crime_report_text"/>

    </RelativeLayout>

</FrameLayout>

